--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -16,6 +16,7 @@ const t = locale === "ar" ? ar : en;
           src="images/wecode-logo-light.png"
           alt="WeCode Libya Logo"
           width="320"
+          loading="lazy"
         />
       </div>
 
