--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -1,6 +1,3 @@
----
----
-
 <section id="about" class="py-24 bg-white">
   <div class="container mx-auto px-4">
     <div class="max-w-6xl mx-auto">
@@ -16,6 +13,7 @@
             src="images/team-collaboration.jpg"
             alt="WeCode Libya Team Collaboration"
             class="object-cover w-full h-full"
+            loading="lazy"
           />
         </div>
 
