--- a/src/components/CTASection.astro
+++ b/src/components/CTASection.astro
@@ -1,6 +1,3 @@
----
----
-
 <section
   class="py-24 bg-gradient-to-br from-[#12329C] via-[#1a2565] to-[#0f1642] relative overflow-hidden"
 >
@@ -15,7 +12,12 @@
   <div class="container mx-auto px-4 relative z-10">
     <div class="max-w-4xl mx-auto text-center space-y-8">
       <div class="flex justify-center mb-6">
-        <img src="images/wecode-logo-light.png" alt="WeCode Libya" width="200" />
+        <img
+          src="images/wecode-logo-light.png"
+          alt="WeCode Libya"
+          width="200"
+          loading="lazy"
+        />
       </div>
 
       <div class="pt-6">
