--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,3 @@
----
----
-
 <header
   class="fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur-lg border-b border-gray-200"
 >
@@ -12,6 +9,7 @@
           alt="WeCode Libya"
           width="200"
           class="h-12 w-auto"
+          loading="lazy"
         />
       </a>
 
